Applied IntelliJ code inspections suggestion: Java 9 migration aid